Update nav and main page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,22 +4,29 @@ layout: default
 {% comment %}
 <div class="home">
 
-  <h1 class="page-heading">Posts</h1>
+    <h1 class="page-heading">Posts</h1> {{ content }}
 
-  {{ content }}
+    <ul class="post-list">
+        {% for post in site.posts %}
+        <li>
+            <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
 
-  <ul class="post-list">
-    {% for post in site.posts %}
-      <li>
-        <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
-
-        <h2>
+            <h2>
           <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
         </h2>
-      </li>
-    {% endfor %}
-  </ul>
+        </li>
+        {% endfor %}
+    </ul>
 
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+    <p class="rss-subscribe">subscribe <a href="{{ " /feed.xml " | relative_url }}">via RSS</a></p>
 
 </div>{% endcomment %}
+<section id="section-header">
+    <h1>Welcome to Macintosh Helper</h2>
+    <h3>Your source of tech knowledge</h3>
+</section>
+
+<section id="section-blog">
+    <h2>Tech Blog Posts</h2>
+
+</section>
