Got basic site working. Created some CSS, etc

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,12 +21,16 @@ layout: default
     <p class="rss-subscribe">subscribe <a href="{{ " /feed.xml " | relative_url }}">via RSS</a></p>
 
 </div>{% endcomment %}
+
 <section id="section-header">
-    <h1>Welcome to Macintosh Helper</h2>
-    <h3>Your source of tech knowledge</h3>
+    <div class="container">
+        <h1>Welcome to Macintosh Helper</h2>
+        <h3>Your source of tech knowledge</h3>
+    </div>
 </section>
 
 <section id="section-blog">
-    <h2>Tech Blog Posts</h2>
-
+    <div class="container">
+        <h2>Tech Blog Posts</h2>
+    </div>
 </section>
