--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,9 @@
     <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
     <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
+    <!-- Hmm, I'll try out some vanilla CSS for once. Might uncomment if I get stuck... <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha384-wKclsw1inR27tF/KhTEhyufz5SmBKSkOaIEKhq9qu8QbqeaMhzuGtCQmrghNKXq0" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Ubuntu:300,400,700" rel="stylesheet">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 
