--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,14 +7,12 @@
 
     {% include header.html %}
 
-    <section class="main-content">
-      <div class="container">
+    <main class="main-content">
         {{ content }}
-      </div>
-    </section>
+  </main>
 
     {% include footer.html %}
-
+    {% include scripts.html %}
   </body>
 
 </html>
