--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,16 @@
 <div class="trigger">
     {% for my_page in site.pages %} {% if my_page.title %}
     <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a> {% endif %} {% endfor %} {% endcomment %}
-<header id="site-header">
+<header id="site-header"{% if page.layout == 'home' %} class="cover-header"{% endif %}>
     <div class="container">
-        <a class="site-title" href="{{ " / " | relative_url}}">{{ site.title | escape }}</a>
+        {% if page.layout == 'home' %}
+        <div class="header-lead">
+            <h1><strong>MACINTOSH</strong> HELPER</h1>
+            <span class="header-line"></span>
+            <h3>My blog, videos and work</h3>
+        </div>
+        {% endif %}
+        <a class="site-title" href="{{ " / " | relative_url}}">MACINTOSH HELPER</a>
         <nav class="navbar">
             <ul>
                 <li>
