--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,1 +1,9 @@
 <script async src="{{ "/assets/main.js" | relative_url }}"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
+<script>
+  WebFont.load({
+    google: {
+      families: ['Roboto:300,400,500,700,900', 'Open Sans', 'Ubuntu']
+    }
+  });
+</script>
