--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,22 +23,24 @@ layout: default
 </div>{% endcomment %}
 
 <section id="section-header">
-    <div class="header-grid" id="header-grid-blog">
-        <div class="header-grid-meta">
-            <h2>Blog</h2>
-            <h3>Articles on tech and travel</h3>
+    <div class="container">
+        <div class="header-grid" id="header-grid-blog">
+            <div class="header-grid-meta">
+                <h2>Blog</h2>
+                <h3>Articles on tech and travel</h3>
+            </div>
         </div>
-    </div>
-    <div class="header-grid" id="header-grid-video">
-        <div class="header-grid-meta">
-            <h2>Video</h2>
-            <h3>Tech guides and travel vlogs</h3>
+        <div class="header-grid" id="header-grid-video">
+            <div class="header-grid-meta">
+                <h2>Video</h2>
+                <h3>Tech guides and travel vlogs</h3>
+            </div>
         </div>
-    </div>
-    <div class="header-grid" id="header-grid-mywork">
-        <div class="header-grid-meta">
-            <h2>My Work</h2>
-            <h3>Web design and development</h3>
+        <div class="header-grid" id="header-grid-mywork">
+            <div class="header-grid-meta">
+                <h2>My Work</h2>
+                <h3>Web design and development</h3>
+            </div>
         </div>
     </div>
 </section>
