--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     {% include header.html %}
 
-    <main class="main-content{% if page.layout == 'home' %} cover-main container{% endif %}">
+    <main class="main-content{% if page.layout == 'home' %} cover-main {% endif %}">
         {{ content }}
   </main>
 
