Added video and work sections + big adjustments

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,31 +22,128 @@ layout: default
 
 </div>{% endcomment %}
 
-<section id="section-header">
+<div id="section-header">
     <div class="container">
         <div class="header-grid" id="header-grid-blog">
             <div class="header-grid-meta">
-                <h2>Blog</h2>
+                <a href="#section-blog"><h2>Blog</h2></a>
                 <h3>Articles on tech and travel</h3>
             </div>
         </div>
         <div class="header-grid" id="header-grid-video">
             <div class="header-grid-meta">
-                <h2>Video</h2>
+                <a href="#section-video"><h2>Video</h2></a>
                 <h3>Tech guides and travel vlogs</h3>
             </div>
         </div>
         <div class="header-grid" id="header-grid-mywork">
             <div class="header-grid-meta">
-                <h2>My Work</h2>
+                <a href="#section-work"><h2>My Work</h2></a>
                 <h3>Web design and development</h3>
             </div>
         </div>
     </div>
-</section>
+</div>
 
 <section id="section-blog">
     <div class="container">
-        <h2>Tech Blog Posts</h2>
+        <h2>Blog</h2>
+        <div class="blog-container">
+            <div class="blog-box">
+                <h3>Tech Blog</h3>
+                <a href="https://macintoshhelper.com/blog"><h4>Macintosh Helper</h4></a>
+                <p>I write blog posts about tech.</p>
+            </div>
+            <div class="blog-box">
+                <h3>Travel Blog</h3>
+                <a href="https://theoffbeatnomad.com/blog"><h4>Offbeat Nomad</h4></a>
+                <p>I love to travel. Here, I post travel tips and advice.</p>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="section-video">
+    <div class="container">
+        <h2>Video</h2>
+        <div class="video-container">
+            <div class="video-box">
+                <div class="video-cover" style="background: url('/assets/img/section-header-bg.jpg')">
+                    <h3>macmaster4848</h3>
+                </div>
+                <!-- <a href="https://macintoshhelper.com/blog"><h4>Macintosh Helper</h4></a> -->
+                <p>Computer and technology videos. I have several series such as "The Tech Dictionary", helping you learn and understand more about tech and computers.</p>
+                <div class="video-stats">
+                    <h4>Stats</h4>
+                    <p>Joined Nov 17, 2008</p>
+                    <p>747,031 views</p>
+                </div>
+                <div class="video-more">
+                    <a class="btn-watch" href="https://youtube.com/macmaster4848">WATCH</a>
+                    <a class="btn-subscribe" href="https://youtube.com/macmaster4848?sub_confirmation=1">SUBSCRIBE</a>
+                </div>
+            </div>
+            <div class="video-box">
+                <div class="video-cover">
+                    <h3>Offbeat Nomad</h3>
+                </div>
+                <!-- <a href="https://theoffbeatnomad.com/blog"><h4>Offbeat Nomad</h4></a> -->
+                <p>Travel vlogs and advice.</p>
+                <div class="video-stats">
+                    <h4>Stats</h4>
+                    <p>Joined Jul 19, 2016</p>
+                    <p>356 views</p>
+                </div>
+                <div class="video-more">
+                    <a class="btn-watch" href="https://theoffbeatnomad.com/youtube">WATCH</a>
+                    <a class="btn-subscribe" href="https://www.youtube.com/channel/UClHmMWgf9jeuPQhantV4lCg?sub_confirmation=1">SUBSCRIBE</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="section-work">
+    <div class="container">
+        <h2>Work</h2>
+        <div class="work-container">
+            <div class="work-box">
+                <h3>Skills</h3>
+
+                <table>
+                    <tr>
+                        <td><h4>Programming Languages</h4></td>
+                        <td>Experience</td>
+                    </tr>
+                    <tr>
+                        <td>JavaScript</td>
+                        <td>Some Experience With</td>
+                    </tr>
+                    <tr>
+                        <td>Java</td>
+                        <td>Most Experienced In</td>
+                    </tr>
+                    <tr>
+                        <td><h4>Technologies</h4></td>
+                        <td>Experience</td>
+                    </tr>
+                    <tr>
+                        <td>HTML5</td>
+                        <td>Most Experienced In</td>
+                    </tr>
+                    <tr>
+                        <td>CSS3</td>
+                        <td>Most Experienced In</td>
+                    </tr>
+                    <tr>
+                        <td>Node.js</td>
+                        <td>Dabbled In</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="work-box">
+                <h3>Projects I've Worked On</h3>
+                <a href="https://www.mcnext.net"><h4>MCNext</h4></a>
+                <p>Charity Minecraft server. This is an MMO game server coded inside Minecraft. </p>
+            </div>
+        </div>
     </div>
 </section>
