--- a/_sass/macintoshhelper.scss
+++ b/_sass/macintoshhelper.scss
@@ -82,6 +82,20 @@ h5 {
 h6 {
     font-size: 12px;
 }
+
+table, td, th {
+    border: 1px solid #ddd;
+    text-align: left;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    padding: 15px;
+}
 /* ----------------- end: GLOBAL CHANGES ---------------- */
 .text-center {text-align: center;}
 
@@ -112,6 +126,9 @@ body > header {
         position: absolute;
         color: #000;
         text-decoration: none;
+        @media (max-width: 992px) and (min-width: 768px) {
+            display: none;
+        }
     }
     nav {
         position: absolute;
@@ -311,6 +328,7 @@ main.cover-main {
         padding: 15px;
         width: 100%;
         h3 {display: none;} // temp
+        a {text-decoration: none;}
     }
     #header-grid-blog {
         background-color: rgba(52, 185, 95, 0.34);
@@ -333,8 +351,176 @@ main.cover-main {
         }
     }
 }
-#section-blog {
+section {
     min-height: 100vh;
-    background: rgb(54, 54, 54);
+    background: white;
+    color: black;
+    .blog-container {
+        display: flex;
+        margin-top: 75px;
+        height: 300px;
+        @media (max-width: 544px) {
+            flex-wrap: wrap;
+            .blog-box {
+                margin: 20px !important;
+            }
+        }
+        .blog-box {
+            display: flex;
+            align-items: center;
+            flex-flow: wrap;
+            width: 100%;
+            background: white;
+            margin: 0px 20px;
+            padding: 30px;
+            color: black;
+            a {
+                color: #ffffff;
+                background-color: #050f12;
+                padding: 20px;
+            }
+            h3 {
+                text-transform: uppercase;
+            }
+            h4 {
+                font-size: 30px;
+                font-family: 'Roboto';
+                text-transform: uppercase;
+            }
+            h3, a, p {
+                width: 100%;
+            }
+        }
+    }
+}
+section:nth-child(even) {
+    background-color: rgb(54, 54, 54);
     color: white;
+}
+
+#section-video {
+    .video-container {
+        display: flex;
+    }
+    .video-box {
+        flex: 1;
+        box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+        margin: 20px 20px;
+        border-radius: 2px;
+        .video-cover {
+            height: 200px;
+            background-size: cover !important;
+            background: #050f12;
+            padding: 20px;
+            position: relative;
+            margin-bottom: 20px;
+            h3 {
+                position: absolute;
+                bottom: 20px;
+                color: white;
+            }
+        }
+        p {
+            padding: 20px;
+            color: rgba(119, 119, 119, 1);
+            font-weight: 200;
+            font-family: 'Roboto';
+            min-height: 72px;
+        }
+        .video-stats {
+            padding: 20px;
+            p {
+                padding: 20px 0px;
+                border-top: solid 1px rgb(238, 238, 238);
+            }
+            h4 {
+                padding: 20px 0px;
+            }
+        }
+        h4 {
+            text-align: left;
+        }
+        .video-more {
+            display: flex;
+            padding: 20px;
+            a {
+                border-radius: 2px;
+                box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+                padding: 15px;
+                color: white;
+                text-decoration: none;
+                font-family: 'Roboto';
+            }
+            .btn-watch {
+                background: rgb(23, 199, 230);
+                margin-right: auto;
+            }
+            .btn-subscribe {
+                background: rgb(230, 33, 23);
+                margin-left: auto;
+            }
+        }
+    }
+}
+
+#section-work {
+    .work-container {
+        display: flex;
+        margin-top: 75px;
+        min-height: 300px;
+        @media (max-width: 544px) {
+            flex-wrap: wrap;
+            .work-box {
+                margin: 20px !important;
+                width: 100%;
+            }
+        }
+        .work-box {
+            width: 100%;
+            background: white;
+            margin: 0px 20px;
+            padding: 30px;
+            color: black;
+            h3 {
+                text-transform: uppercase;
+                margin-bottom: 20px;
+            }
+            h4 {
+                font-size: 20px;
+                font-family: 'Roboto';
+                text-transform: uppercase;
+                text-align: left;
+                margin-bottom: 16px;
+                margin-top: 16px;
+            }
+            h3, p {
+                width: 100%;
+            }
+            li {
+                list-style-type: disc;
+                margin: 10px 0px 0px 20px;
+            }
+        }
+    }
+    table {
+        margin-top: 20px;
+    }
+}
+
+footer {
+    background: #050f12;
+    color: white;
+    padding: 40px 0px;
+    .container {
+        display: flex;
+    }
+    .footer-info {
+        flex: 1;
+    }
+    a {
+        color: white;
+    }
+    h2 {
+        margin-bottom: 20px;
+    }
 }
