Polished and improved responsiveness

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="footer-info">
             <h2>{{ site.title | escape }}</h2>
-            <p>{{ site.description | escape }}</p>
+            <p>{{ site.description | escape }}<br><br>Site built with: Pure HTML5, CSS3, JavaScript, Jekyll</p>
         </div>
         <nav>
             <ul class="footer-social-media">
