--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -75,7 +75,7 @@ layout: default
                 <div class="video-stats">
                     <h4>Stats</h4>
                     <p>Joined Nov 17, 2008</p>
-                    <p>747,031 views</p>
+                    <p>747,031+ views</p>
                 </div>
                 <div class="video-more">
                     <a class="btn-watch" href="https://youtube.com/macmaster4848">WATCH</a>
@@ -91,7 +91,7 @@ layout: default
                 <div class="video-stats">
                     <h4>Stats</h4>
                     <p>Joined Jul 19, 2016</p>
-                    <p>356 views</p>
+                    <p>356+ views</p>
                 </div>
                 <div class="video-more">
                     <a class="btn-watch" href="https://theoffbeatnomad.com/youtube">WATCH</a>
@@ -140,9 +140,15 @@ layout: default
                 </table>
             </div>
             <div class="work-box">
-                <h3>Projects I've Worked On</h3>
-                <a href="https://www.mcnext.net"><h4>MCNext</h4></a>
-                <p>Charity Minecraft server. This is an MMO game server coded inside Minecraft. </p>
+                <h3>Some Projects I've Worked On</h3>
+                <table>
+                    <tr>
+                        <td style="width: 25%;"><h4><a href="https://www.mcnext.net">MCNext</a></h4></td>
+                        <td>
+                            <p>Charity Minecraft server. This is an MMO game server coded inside Minecraft with Java and Bukkit plugin API. I've coded the entire server and website.</p>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
