--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     {% endif %}
-    <nav class="navbar">
+    <nav class="navbar" id="navbarMain">
         <div class="container">
             <a class="site-title" href="{{ " / " | relative_url}}">MACINTOSH HELPER</a>
             <ul>
@@ -23,14 +23,14 @@
                     <a href="#section-blog">BLOG</a>
                 </li>
                 <li>
-                    <a href="#section-youtube">VIDEOS</a>
+                    <a href="#section-video">VIDEOS</a>
                 </li>
                 <li>
                     <a href="#section-work">MY WORK</a>
                 </li>
-                <li>
+                <!-- <li>
                     <a href="#section-about">ABOUT</a>
-                </li>
+                </li> -->
                 <li>
                     <a href="#section-contact">CONTACT</a>
                 </li>
