Further changes. Added more projects

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -145,7 +145,19 @@ layout: default
                     <tr>
                         <td style="width: 25%;"><h4><a href="https://www.mcnext.net">MCNext</a></h4></td>
                         <td>
-                            <p>Charity Minecraft server. This is an MMO game server coded inside Minecraft with Java and Bukkit plugin API. I've coded the entire server and website.</p>
+                            <p>Charity Minecraft server. This is an MMO game server coded inside Minecraft with Java and Bukkit plugin API. Server is horizontally scalable and runs on Linux servers managed by me. I've coded the entire server and website.</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="width: 25%;"><h4><a href="javascript:void(0);">MineToPlay</a></h4></td>
+                        <td>
+                            <p>Minecraft minigame server business I created. Custom coded entire server experience with a scripting language (Skript) and some Java. December 2015 - June 2016 (discontinued).</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="width: 25%;"><h4><a href="https://macintoshhelper.com">Macintosh Helper Site</a></h4></td>
+                        <td>
+                            <p>Personal website. Previously vanilla static and several PHP apps: WordPress, MediaWiki, Vanilla Forums. Switched from LAMP to nginx, Node.js, Jekyll stack this year.  March 2010 - now.</p>
                         </td>
                     </tr>
                 </table>
