--- a/_sass/macintoshhelper.scss
+++ b/_sass/macintoshhelper.scss
@@ -522,6 +522,10 @@ section:nth-child(even) {
     }
     table {
         margin-top: 20px;
+        a {
+            color: #2295b7;
+            text-transform: none;
+        }
     }
 }
 
