Small fixes/changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
     {% endif %}
     <nav class="navbar" id="navbarMain">
         <div class="container">
-            <a class="site-title" href="{{ " / " | relative_url}}">MACINTOSH HELPER</a>
+            <a class="site-title" href="#">MACINTOSH HELPER</a>
             <ul>
                 <li>
                     <a href="#site-header">HOME</a>
@@ -31,9 +31,9 @@
                 <!-- <li>
                     <a href="#section-about">ABOUT</a>
                 </li> -->
-                <li>
+                <!-- <li>
                     <a href="#section-contact">CONTACT</a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </nav>
